--- a/LogBook.LogBookApp/MainPage.xaml
+++ b/LogBook.LogBookApp/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:LogBook.LogBookApp.ViewModels"
              x:DataType="viewmodels:MainViewModel"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="LogBook.LogBookApp.MainPage">
 
     <StackLayout>
