--- a/LogBook.LogBookApp/MainPage.xaml
+++ b/LogBook.LogBookApp/MainPage.xaml
@@ -6,7 +6,32 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="LogBook.LogBookApp.MainPage">
 
-    <StackLayout>
+    <ContentPage.Behaviors>
+        <toolkit:EventToCommandBehavior EventName="Appearing" 
+                                        Command="{Binding LoadDataCommand}" />
+    </ContentPage.Behaviors>
+
+    <Grid RowDefinitions="Auto,180">
+
         <Label Text="{Binding Header}" />
-    </StackLayout>
+
+        <Grid ´RowDefintions="Auto,*" Grid.Row="1">
+            <!-- Header -->
+            <Grid ColumnDefinitions="100,2*,*,*">
+                <Label Text="Datum" Padding="5" />
+                <Label Grid.Column="1" Text="Beschreibung" Padding="5" />
+                <Label Grid.Column="2" Text="Von" Padding="5" />
+                <Label Grid.Column="3" Text="Nach" Padding="5" />
+            </Grid>
+            <!-- Data -->
+            <CollectionView Grid.Row="1">
+                <CollectionView.EmptyView>
+                    <Label Text="Es wurde keine Fahrt hinzugefügt." />
+                </CollectionView.EmptyView>
+            </CollectionView>
+        </Grid>
+
+    </Grid>
+    
+    
 </ContentPage>
