--- a/LogBook.LogBookApp/MainPage.xaml
+++ b/LogBook.LogBookApp/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:LogBook.LogBookApp.ViewModels"
              x:DataType="viewmodels:MainViewModel"
+             xmlns:model="clr-namespace:LogBook.Lib;assembly=LogBook.Lib"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="LogBook.LogBookApp.MainPage">
 
@@ -11,26 +12,43 @@
                                         Command="{Binding LoadDataCommand}" />
     </ContentPage.Behaviors>
 
-    <Grid RowDefinitions="Auto,180">
-
-        <Label Text="{Binding Header}" />
-
-        <Grid ´RowDefintions="Auto,*" Grid.Row="1">
+    <!-- erstes Grid (Hauptgrid) -->
+    <Grid RowDefinitions="Auto,180" Margin="10">
+        
+        <!--
+        <Label Text="{Binding Header}" FontSize="Subtitle" FontAttributes="Bold"/>
+        -->
+        
+        <!-- erste Zeile im Hauptgrid -->
+        <Grid RowDefinitions="Auto,*" Grid.Row="1">
             <!-- Header -->
             <Grid ColumnDefinitions="100,2*,*,*">
-                <Label Text="Datum" Padding="5" />
-                <Label Grid.Column="1" Text="Beschreibung" Padding="5" />
-                <Label Grid.Column="2" Text="Von" Padding="5" />
-                <Label Grid.Column="3" Text="Nach" Padding="5" />
+                <Label FontSize="Caption" FontAttributes="Bold" Text="Datum" Padding="5" />
+                <Label FontSize="Caption" FontAttributes="Bold" Grid.Column="1" Text="Beschreibung" Padding="5" />
+                <Label FontSize="Caption" FontAttributes="Bold" Grid.Column="2" Text="Von" Padding="5" />
+                <Label FontSize="Caption" FontAttributes="Bold" Grid.Column="3" Text="Nach" Padding="5" />
             </Grid>
             <!-- Data -->
-            <CollectionView Grid.Row="1">
+            <CollectionView Grid.Row="1" 
+                            ItemsSource="{Binding Entries}">
                 <CollectionView.EmptyView>
-                    <Label Text="Es wurde keine Fahrt hinzugefügt." />
+                    <Label Padding="10" Text="Es wurde keine Fahrt hinzugefügt." />
                 </CollectionView.EmptyView>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Entry">
+                        <Grid ColumnDefinitions="100,2*,*,*">
+                            <Label Text="{Binding Start, StringFormat='{0:yyyy-MM-dd}'}" Padding="5" />
+                            <Label Grid.Column="1" Text="{Binding Description}" Padding="5" />
+                            <Label Grid.Column="2" Text="{Binding From}" Padding="5" />
+                            <Label Grid.Column="3" Text="{Binding To}" Padding="5" />
+                        </Grid>
+
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
             </CollectionView>
         </Grid>
 
+        <Button Command="{Binding AddCommand}" Grid.Row="1" Text="Add demo" />
     </Grid>
     
     
