--- a/LogBook.LogBookApp/AppShell.xaml
+++ b/LogBook.LogBookApp/AppShell.xaml
@@ -8,7 +8,7 @@
     Title="LogBook.LogBookApp">
 
     <ShellContent
-        Title="Home"
+        Title="Fahrtenbuch"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
